Fix top layout dropdown overlap (#4048)
* Fix SceneSelector dropdown rendering above component

* Fix top layout dropdown overlap

--- a/app/components-react/editor/elements/SceneSelector.m.less
+++ b/app/components-react/editor/elements/SceneSelector.m.less
@@ -7,13 +7,20 @@
   justify-content: flex-end;
 
   > div:last-child {
-    top: 32px !important;
-    height: calc(100% - 32px);
+    top: 44px !important;
+    height: calc(100% - 44px);
   }
 
   :global(.ant-dropdown) {
     top: 0 !important;
     height: 100%;
+  }
+}
+
+:global(.no-top-padding) {
+  .top-container > div:last-child {
+    top: 32px !important;
+    height: calc(100% - 32px);
   }
 }
 
